# typedcache

./: Cargo.toml  README.md
.github/: dependabot.yml
benches/: bench.rs
examples/: cached.rs  callbacks.rs  dataloader.rs
src/: error.rs  item.rs  lib.rs  table.rs
src/typed/: dynhash.rs  mod.rs  typedkey.rs  typedvalue.rs
tests/: test.rs
