[package]
name = "typedcache"
version = "0.1.0"
edition = "2021"
authors = ["isjieliu@163.com"]
description = "Concurrent-safe typedcache with expiration capabilities."
keywords = ["typed", "cache"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Millione/typedcache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1"
lazy_static = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
tokio-scoped = "0.2"
rand = "0.8"

[[bench]]
name = "bench"
harness = false
